WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
138299
AX: Fix some minor typos related to the word "accessibility".
https://bugs.webkit.org/show_bug.cgi?id=138299
Summary
AX: Fix some minor typos related to the word "accessibility".
Sungmann Cho
Reported
2014-11-02 21:37:15 PST
Fix some minor typos related to the word "accessibility".
Attachments
Patch
(10.23 KB, patch)
2014-11-02 21:44 PST
,
Sungmann Cho
no flags
Details
Formatted Diff
Diff
Patch
(10.31 KB, patch)
2014-11-02 23:32 PST
,
Sungmann Cho
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2014-11-02 21:37:34 PST
<
rdar://problem/18849696
>
Sungmann Cho
Comment 2
2014-11-02 21:44:36 PST
Created
attachment 240826
[details]
Patch
Sungmann Cho
Comment 3
2014-11-02 23:32:37 PST
Created
attachment 240829
[details]
Patch
Sungmann Cho
Comment 4
2014-11-02 23:36:32 PST
There was some mistakes in ChangeLogs. Sorry for that. Would you please take a look again? Thanks!
WebKit Commit Bot
Comment 5
2014-11-03 00:22:17 PST
Comment on
attachment 240829
[details]
Patch Clearing flags on attachment: 240829 Committed
r175466
: <
http://trac.webkit.org/changeset/175466
>
WebKit Commit Bot
Comment 6
2014-11-03 00:22:24 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug