AX: Fix some minor typos related to the word "accessibility". https://bugs.webkit.org/show_bug.cgi?id=138299

Patch by Sungmann Cho <sungmann.cho@navercorp.com> on 2014-11-03
Reviewed by Chris Fleizach.

Source/WebCore:

No new tests, no behavior change.

* accessibility/AccessibilityNodeObject.cpp:
(WebCore::shouldUseAccessibilityObjectInnerText):
(WebCore::AccessibilityNodeObject::textUnderElement):
(WebCore::shouldUseAccessiblityObjectInnerText): Deleted.
* accessibility/atk/WebKitAccessibleInterfaceText.cpp:
(getRunAttributesFromAccessibilityObject):
(webkitAccessibleTextGetRunAttributes):
(getRunAttributesFromAccesibilityObject): Deleted.
* page/CaptionUserPreferencesMediaAF.cpp:
(WebCore::CaptionUserPreferencesMediaAF::textTrackSelectionScore):

Source/WebCore/platform/gtk/po:

No new tests, no behavior change.

* en_CA.po:

Source/WebKit/win:

No new tests, no behavior change.

* AccessibleBase.h:

Source/WebKit2:

No new tests, no behavior change.

* WebProcess/WebPage/WKAccessibilityWebPageObjectIOS.mm:

LayoutTests:

* accessibility/aria-link-supports-press.html:

Canonical link: https://commits.webkit.org/156137@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@175466 268f45cc-cd09-0410-ab3c-d52691b4dbfc