Source/WebKit2/WebProcess/WebPage/WKAccessibilityWebPageObjectIOS.mm
@@ -37,7 +37,7 @@
 #import <WebCore/WAKAppKitStubs.h>
 
 /* 
- The implementation of this class will be augmented by an accesibility bundle that is loaded only when accessibility is requested to be enabled.
+ The implementation of this class will be augmented by an accessibility bundle that is loaded only when accessibility is requested to be enabled.
  */
 
 @implementation WKAccessibilityWebPageObject
